--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,9 @@
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "file-loader": "^6.0.0",
+    "imagemin": "^7.0.1",
+    "imagemin-jpegtran": "^7.0.0",
+    "imagemin-pngquant": "^9.0.0",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.16",
     "multer": "^1.4.2",
@@ -23,7 +26,6 @@
     "pg": "^7.18.2"
   },
   "devDependencies": {
-    "imagemin": "^7.0.1",
     "request": "^2.81.0",
     "tape": "^4.7.0"
   },
