--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "keen-ui": "^1.3.0",
     "string-pixel-width": "^1.10.0",
     "vue": "^2.6.11",
+    "vue-draggable-resizable": "^2.2.0",
     "vue-rellax": "^0.1.0",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
